<resources>
    <string name="app_name">Domi Domi</string>

    <string name="hello_world">Domi Domi</string>

    <!--<string name="url_base">http://zonaapp.co/domidomi/service/</string>-->
    <!-- <string name="url_base">http://domidomi.zonaapp.co/service/</string> -->
     <!-- <string name="url_base">http://domitesting.zonaapp.co/service/</string> -->
     <!-- <string name="url_base">http://domidomi.movilbox.net:8080/domidomi/service/</string>-->
     <string name="url_base">http://192.168.2.24:96/service/services.php?solicitud=</string>

    <string name="title_activity_act_ubicacion">Mi Ubicación</string>
    <string name="senales">*</string>
    <string name="email">E-mail</string>
    <string name="celular">Celular</string>
    <string name="direccion">Dirección</string>
    <string name="apellidos_nombres">Nombres y Apellidos</string>
    <string name="categoria_filtro"><u>Detalle</u></string>
    <!-- Fin  -->

    <string-array name="tabs">
        <item>Menú</item>
        <item>Info</item>
        <item>Reseñas</item>
    </string-array>

    <string-array name="pedidos">
        <item>Seguimiento</item>
        <item>Historial</item>
    </string-array>

    <string name="title_activity_act_product_add">Agregar Producto</string>
    <string name="Descripcion">Descripción</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="agregar">Agregar</string>
    <string name="cantidad">Cantidad</string>
    <string name="numero">1</string>
    <string name="title_activity_act_car">Carrito de compras</string>
    <string name="title_activity_maps">Mapas Restaurante</string>
    <string name="title_activity_act_finalizar_pedido">Finalizar Pedido</string>

    <string name="action_settings">Salir</string>
    <string name="action_registrar">Registrarse</string>
    <string name="title_activity_act_tutorial">Domicilios YA</string>
    <string name="skip">SKIP</string>
    <string name="select_images">Seleccione una imagen</string>
    <string name="welcom_head_01">Spreadsheets on the go</string>
    <string name="welcom_content_01">Get stuff done with or without an internet connection.</string>
    <string name="welcom_head_02">Share and edit together</string>
    <string name="welcom_content_02">Write on your own or invite more people to contribute.</string>
    <string name="welcom_head_03">Automatically save to the web</string>
    <string name="welcom_content_03">Never lose your progress, so you can keep working from any computer or device.</string>
    <string name="welcom_head_04">Edit Excel spreadsheets</string>
    <string name="welcom_content_04">Open, edit, and save Excel files - all within Sheets.</string>
    <string name="title_activity_act_principal">Domicilios YA</string>
    <string name="title">Cerrar la aplicación</string>
    <string name="content">¿Esta seguro que desea cerrar la aplicación?</string>
    <string name="agree">Aceptar</string>
    <string name="disagree">Cancelar</string>
    <string name="more_info">More Info</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_act_register">Registrar</string>
    <string name="title_header">Restaurantes para pedir YA</string>
    <string name="title_footer">Domicilios YA</string>
    <string name="nombre_empresa">Nombre de la empresa</string>
    <string name="nit">Nit</string>
    <string name="informacion">Información</string>
    <string name="sede_sucursales">Sedes o sucursales</string>

    <string name="titulo_confirmacion_pedido">¡Atención!</string>
    <string name="contenido_confirmacion_pedido">Desea seguir agregando más productos o quiere realizar el pedido?</string>
    <string name="add_producto">Seguir Agregando</string>
    <string name="realizar_pedido">Realizar Pedido</string>
    <!-- Fin Texto comunes -->

    <!-- Menu -->
    <string name="menu_lista">Lista de restaurante</string>
    <string name="menu_perfiles">Perfiles</string>
    <string name="menu_ubicacion">Mi ubicacion</string>
    <string name="menu_carrito">Carro</string>
    <string name="menu_categoria">Categoria</string>
    <string name="menu_salir">Salir</string>
    <string name="drawer_open">Menu Opened</string>
    <string name="drawer_close">Menu Closed</string>
    <string name="menu_search">Search</string>
    <string name="lsta_pedido">Estado de los pedidos</string>
    <!-- Fin Menu -->

    <!-- Texto de validaciones -->
    <string name="nombre_requerido">El Nombre es un campo requerido</string>
    <string name="nombre_apellido">El Apellido es un campo requerido</string>
    <string name="celular_requerido">El Celular es un campo requerido</string>
    <string name="direccion_requerida">La Dirección es un campo requerido</string>
    <string name="email_requerida">La Dirección Email es un campo requerido</string>
    <string name="dato_true">Su registro fue exitoso.</string>
    <string name="dato_false">No se pudo guardar su registro.</string>
    <string name="title_activity_act_maps">Mapa Tiendas</string>
    <string name="compania">Nombre Compañia</string>
    <string name="title_activity_activity_sedes">Sedes</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="title_activity_act_estado_pedido">Estado de los pedidos</string>
    <string name="aceptar">Aceptar</string>
    <string name="enviar">Enviar</string>
    <string name="nombre_apellido_t">Nombre/Apellido</string>
    <string name="nombre">Nombres</string>
    <string name="medio_de_pago">Medio de pago</string>
    <string name="latitud">Latitud</string>
    <string name="direcci_n_lugar_de_referencia">Dirección/Lugar de referencia</string>
    <string name="celular_tel_fono">Celular</string>
    <string name="escriba_la_cantidad">Escriba la cantidad</string>
    <string name="longitud">Longitud</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_act_comentario">Calificación del Servicio</string>
    <string name="title_radar_view">Buscando establecimientos cercanos a tu posición actual</string>
    <string name="title_activity_act_my_perfil">Perfil</string>
    <string name="title_activity_act_direccion_escrita">"Direccion "</string>
    <string name="tel_fono">Teléfono</string>
    <string name="direcci_n">Dirección</string>
    <string name="separado">#</string>
    <string name="separador2">-</string>
    <string name="ciudades">Ciudad</string>
    <string name="zonas">Municipio</string>
    <string name="incluir_en_los_pedido">Incluir En los pedido</string>
    <string name="guardar">Guardar</string>
    <string name="domicilios">Domicilio</string>
    <string name="total">Total a Pagar</string>
    <string name="comentario">Comentario:</string>
    <string name="barrio">Barrio</string>
    <string name="adiciones_extras">Adiciones/Extras</string>
    <string name="precios">Valores</string>
    <string name="unidad">Unidad</string>
    <string name="total_signo">Total: $</string>
    <string name="_0">0</string>
    <string name="separador">#</string>
    <string name="voy_a_pagar_con_un_billete_de_ej_50_000">Valor en efectivo con el que voy a pagar... Ej: 50.000</string>
    <string name="medios_de_pago">Medios de Pago</string>
    <string name="lugar_de_referencia">Lugar de Referencia</string>
    <string name="separador_2">-</string>
    <string name="search">Search</string>
    <string name="nombre_sede">Nombre Sede</string>
    <string name="tiempo_de_espera">Tiempo de espera</string>
    <string name="costo_de_env_o">Costo de envío</string>
    <string name="medios_de_pagos">Medios de pagos</string>
    <string name="name">name</string>
    <string name="precio">Precio</string>
    <string name="adiciones">Adiciones:</string>
    <string name="establecimiento">Establecimiento</string>
    <string name="estado">Estado</string>
    <string name="fecha">Fecha</string>
    <string name="orden">Orden #</string>
    <string name="cancelar_pedido">Cancelar Pedido</string>
    <string name="buscando_establecimientos_cercanos">Buscando Establecimientos Cercanos</string>
    <string name="no_tiene_historial_de_pendientes">No tiene historial de pedidos</string>
    <string name="no_tiene_pedidos_pendientes">No tiene pedidos pendientes</string>
    <string name="nombre_de_la_sede">Nombre de la sede</string>
    <string name="_2016_02_24">2016-02-24</string>
    <string name="texto_del_comentario">Texto del comentario</string>
    <string name="_0_">$0</string>
    <string name="seleccione_una_sede_para_ver_su_carrito">Seleccione una sede para ver su carrito</string>
    <string name="no_tiene_art_culos_en_el_carrito">No tiene artículos en el carrito</string>
    <string name="incluir_en_los_pedidos">Incluir en los pedidos</string>
    <string name="horario">Horario</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_establecimiento">Establecimientos</string>
    <string name="action_seguimiento">Seguimiento</string>
    <string name="action_carrito">Carrito</string>
    <string name="action_perfil">Perfiles</string>
    <string name="action_comunicar">Comunicar</string>
    <string name="action_compartir">Compartir</string>
    <string name="title_activity_act_create_perfil">Crear Perfil</string>
    <string name="title_activity_act_detalle_compra">Detalle del pedido</string>
    <string name="title_activity_act_add_carrito_edit">Editar Carrito</string>
    <string name="domicilios_delivery">Domicilios</string>

</resources>
