<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="9dp"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="7dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_face_black_24dp"
                android:id="@+id/imageView7"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="7dp"
                android:layout_toRightOf="@+id/imageView7"
                android:layout_toEndOf="@+id/imageView7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comentario"
                        android:id="@+id/textView6"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="@dimen/dimen_letra_app"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2016_02_24"
                        android:layout_marginLeft="13dp"
                        android:id="@+id/txtFechaComentario"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="11sp"/>

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_del_comentario"
                    android:layout_marginTop="2dp"
                    android:id="@+id/txtComentario"
                    android:textStyle="italic"
                    android:textSize="11sp"/>

            </LinearLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>