<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/color_gris"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout2"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_password1"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editNombreCliente"
                            android:hint="@string/nombre"
                            android:textSize="@dimen/dimen_letra_app"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_celular"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/celular"
                            android:textSize="@dimen/dimen_letra_app"
                            android:id="@+id/editCelular"
                            android:inputType="number"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_telefono"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tel_fono"
                            android:textSize="@dimen/dimen_letra_app"
                            android:id="@+id/editTelefono"
                            android:inputType="number"/>

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/direcci_n"
                    android:textSize="@dimen/dimen_letra_app"
                    android:paddingTop="8dp"
                    android:paddingLeft="3dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/spinner_dir"
                        android:textSize="@dimen/dimen_letra_app"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txt_dir_1"
                        android:layout_weight="1.1"
                        android:textSize="@dimen/dimen_letra_app"
                        android:gravity="center_vertical|center_horizontal"
                        android:inputType="text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/separado"
                        android:textSize="@dimen/dimen_letra_app"
                        android:layout_weight="1.4"
                        android:gravity="center_vertical|center_horizontal" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txt_dir_2"
                        android:layout_weight="1.1"
                        android:textSize="@dimen/dimen_letra_app"
                        android:gravity="center_vertical|center_horizontal"
                        android:inputType="text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/separador2"
                        android:textSize="@dimen/dimen_letra_app"
                        android:layout_weight="1.4"
                        android:gravity="center_vertical|center_horizontal" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txt_dir_3"
                        android:layout_weight="1.1"
                        android:textSize="@dimen/dimen_letra_app"
                        android:gravity="center_vertical|center_horizontal"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/dimen_letra_app"
                            android:paddingLeft="3dp"
                            android:text="@string/ciudades" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/spinner_ciudades" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:id="@+id/zonaLayout"
                            android:visibility="gone"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/dimen_letra_app"
                                android:paddingLeft="3dp"
                                android:text="@string/zonas" />

                            <Spinner
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/spinner_zona" />

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>






                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incluir_en_los_pedido"
                    android:id="@+id/switch1"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/dimen_letra_app"
                    android:layout_gravity="right" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar"
                    android:layout_marginTop="14dp"
                    android:id="@+id/buttonG"
                    style="@style/BrandButtonStyle2"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

