<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/grid_item_bg_pressed"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:layout_above="@+id/linearLayout" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:elevation="17dp"
        android:layout_height="85dp"
        android:padding="9dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:gravity="center_vertical">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/BrandButtonStyle2"
            android:text="@string/realizar_pedido"
            android:visibility="gone"
            android:id="@+id/pedirServices" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="6dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/domicilios"
                    android:textSize="@dimen/dimen_letra_app"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="@dimen/dimen_letra_app"
                    android:layout_marginLeft="12dp"
                    android:textColor="#fff" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:id="@+id/domicilioAdd"
                    android:text="@string/_0_"
                    android:textSize="@dimen/dimen_letra_app"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_"
                    android:textSize="@dimen/dimen_letra_app"
                    android:layout_marginLeft="12dp"
                    android:id="@+id/totaltexto"
                    android:textColor="#fff" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
